--- a/src/app.html
+++ b/src/app.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
+    <link rel="icon" href="/icon.png" />
     %sveltekit.head%
   </head>
   <body>
-    <div id="sveltekit">%sveltekit.body%</div>
+    <div id="__sveltekit">%sveltekit.body%</div>
   </body>
 </html>
