refactor: update app.html template

--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,45 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <link rel="icon" href="/icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="index, follow, nocache" />
+    <meta
+      name="theme-color"
+      media="(prefers-color-scheme: dark)"
+      content="#000000"
+    />
+    <meta name="color-scheme" content="dark" />
+    <link rel="icon" type="image/png" href="/favicons/icon-512.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff2"
+      href="/fonts/AspektaVF.woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="preload"
+      as="font"
+      type="font/woff2"
+      href="/fonts/AspektaVF.woff2"
+      crossorigin="anonymous"
+    />
+    <style>
+      @font-face {
+        font-family: 'AspektaVF';
+        font-weight: 100 900;
+        font-style: normal;
+        src: url('/fonts/AspektaVF.woff2') format('woff2');
+      }
+      @font-face {
+        font-family: 'AspektaVF';
+        font-weight: 100 900;
+        font-style: normal;
+        src: url('/fonts/AspektaVF.woff2') format('woff2');
+      }
+    </style>
     %sveltekit.head%
   </head>
   <body>
