refactor: update app.html tmp

--- a/src/app.html
+++ b/src/app.html
@@ -30,6 +30,6 @@
     %sveltekit.head%
   </head>
   <body>
-    <div id="__sveltekit">%sveltekit.body%</div>
+    <div data-sveltekit>%sveltekit.body%</div>
   </body>
 </html>
